--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+textarea:focus, input:focus{
+  outline: none;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -31,6 +33,11 @@ h1{
   margin-top:4rem ;
 }
 
+img{
+  object-fit: cover;
+  background-repeat:no-repeat ;
+  background-size: cover;
+}
 
 /* Footer */
 
@@ -165,6 +172,20 @@ h1{
   height: 30vh;
   border-radius: 10px;
 }
+
+
+.room-package-image{
+  width: 100%;
+  height: 50vh;
+  border-radius: 10px;
+  transition: 200ms ease-in-out; 
+  filter: brightness(0.3);
+}
+
+.room-package-image:hover{
+  filter:  brightness(1);
+}
+
 
 .founder-card-image{
   width: 100%;
@@ -315,6 +336,7 @@ h1{
   flex-direction: column;
   justify-content: center;
   border-radius: 20px;
+  background-size: cover ;
 }
 
 .banner-title{
@@ -363,4 +385,34 @@ h1{
   display: flex;
   justify-content: center;
   margin: 4rem 0;
+}
+
+.all-filter-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.date-container{
+  background: white;
+  padding: 1rem 3rem;
+  border-radius: 10px;
+  margin: 1rem;
+
+}
+
+.date{
+  border: none;
+  display: block;
+  
+}
+
+.each-filter-label{
+  color: #8f8f8f;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.product-image{
+  width: 100%;
 }
