--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,15 @@ code {
     monospace;
 }
 
+.nav-link{
+  color: white !important;
+  transition: 100ms;
+}
+
+.nav-link:hover{
+  text-decoration: underline;
+}
+
 main{
   min-height: 85vh;
 }
@@ -448,12 +457,13 @@ img{
 
 .contain-each-board{
   background-image: url('/images/bg1.jpeg') ;
-  height: 85vh;
+  height: 95vh;
+  overflow: auto;
   width: 95vw;
-  opacity: 0.95;
+  /* opacity: 0.95; */
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   border-radius: 20px;
   background-size: cover ;
 }
@@ -483,6 +493,23 @@ img{
   background-color: #666666;
 }
 
+.banner-btn1{
+  background-color: transparent;
+  color: white;
+  width: 10rem;
+  border: 2px solid white;
+  border-radius: 4px;
+  font-size: 1rem;
+  align-self: center;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: 200ms;
+  height: 100%;
+  width: 14rem;
+  margin-left: 1rem;
+  height: 6rem;
+}
+
 .form-container{
   padding: 3rem 0;
 }
@@ -510,14 +537,19 @@ img{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin-bottom: 2rem;
 }
 
 .date-container{
   background: white;
   padding: 1rem 3rem;
   border-radius: 10px;
-  margin: 1rem;
-
+  margin: 0 1rem;
+  width: 14rem;
+  height: 6rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .date{
@@ -534,4 +566,36 @@ img{
 
 .product-image{
   width: 100%;
+}
+
+
+/* Header media queey */
+
+.contain-each-board1{
+  background-image: url('/images/bg1.jpeg') ;
+  height: 80vh;
+  overflow: auto;
+  width: 95vw;
+  /* opacity: 0.95; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 20px;
+  background-size: cover ;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
+}
+@media only screen and (max-width: 1060px) {
+  .date-container{
+    margin-top:1rem ;
+    height: 5.5rem;
+  }
+
+  .banner-btn1{
+    margin-top:1rem ;
+    height: 5.2rem;
+    margin-left: 0;
+  }
 }
