--- a/src/index.css
+++ b/src/index.css
@@ -232,7 +232,16 @@ img{
   font-weight: bold;
   text-transform: capitalize;
   font-family: 'Allison', cursive;  
-  font-size: 40px;
+  font-size: 60px;
+
+}
+
+.home-page-para{
+  font-weight: 400;
+  text-transform: capitalize;
+  font-size: 20px;
+  color: white;
+  text-align: center;
 
 }
 
@@ -248,12 +257,12 @@ img{
   height: 50vh;
   border-radius: 10px;
   transition: 200ms ease-in-out; 
-  filter: brightness(0.3);
+  filter: brightness(1);
 }
 
-.room-package-image:hover{
+/* .room-package-image:hover{
   filter:  brightness(1);
-}
+} */
 
 
 .founder-card-image{
@@ -544,7 +553,7 @@ img{
   height: 100%;
   width: 14rem;
   margin-left: 1rem;
-  height: 6rem;
+  height: 5rem;
 }
 
 .banner-btn2{
@@ -599,7 +608,7 @@ img{
   border-radius: 10px;
   margin: 0 1rem;
   width: 14rem;
-  height: 6rem;
+  height: 5rem;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -648,7 +657,7 @@ img{
 
   .banner-btn1{
     margin-top:1rem ;
-    height: 5.2rem;
+    height: 5rem;
     margin-left: 0;
   }
 }
